force-app/main/default/objects/Custom_Channel__c/Custom_Channel__c.object-meta.xml
<CustomObject>
    <label>Custom Channel</label>
    <nameField>
        <label>Channel Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>