force-app/main/default/objects/Custom_Channel__c/fields/Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Id__c</fullName>
    <label>Channel Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>