force-app/main/default/objects/Custom_Channel__c/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <description
  >Add the channel name which will publish the event to external system</description>
    <inlineHelpText
  >Custom Channel name will be subscribed to external system</inlineHelpText>
    <label>Channel Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>