force-app/main/default/objects/Custom_Channel__c/fields/Member_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Update_Status__c</fullName>
    <label>Member Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel_Status</valueSetName>
    </valueSet>
</CustomField>