force-app/main/default/objects/Custom_Channel__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>data - Change Data Capture channel corresponding to the selected entities.
event - A channel that contains platform events.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
                <default>true</default>
                <label>Data</label>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>