force-app/main/default/objects/Custom_Channel__c/validationRules/Channel_Name_Change_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Channel_Name_Change_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NOT(ISNEW()),  ISCHANGED( Channel_Name__c ) )</errorConditionFormula>
    <errorDisplayField>Channel_Name__c</errorDisplayField>
    <errorMessage>Channel Name can&apos;t be changes</errorMessage>
</ValidationRule>